Make header and nav-area fixed, adjust main spacing
Updated header and nav-area to use fixed positioning for improved visibility and layering. Adjusted main element's top offset and padding to accommodate the fixed header layout, ensuring proper spacing and layout consistency.

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -30,7 +30,11 @@ header a { text-decoration: none; }
 
 header .brands-section {
   background-color: #000;
-  position: relative;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 9998;
   
   /* Orange accent line */
   &::after {
@@ -135,8 +139,7 @@ header .brands-section {
    -------------------------------------------------------------------------- */
 
 header .main-nav-section {
-  position: sticky;
-  top: 0;
+  position: relative;
   display: flex;
   align-items: center;
   margin: 50px 0;
@@ -248,7 +251,10 @@ header .main-nav-section {
 
   /* Navigation Area */
   .nav-area {
-    width: 75%;
+    position: fixed;
+    top: 50px;
+    right: 250px;
+    width: calc(55%);
     background-color: rgb(0 0 0 / 40%);
     backdrop-filter: blur(20px);
     -webkit-backdrop-filter: blur(20px);
@@ -260,6 +266,7 @@ header .main-nav-section {
     justify-content: space-between;
     padding: 0 1rem;
     padding-left: 2rem;
+    z-index: 9997;
 
     @media (max-width: 1280px) {
       display: none !important;
