--- a/styles/styles.css
+++ b/styles/styles.css
@@ -378,10 +378,10 @@ a {
 main {
   position: relative;
   z-index: 1;
-  padding: 0;
+  top: -54px; /* No extra padding needed since only nav-area is fixed */
 
   @media (max-width: 1024px) {
-    padding-top: 80px;
+    padding-top: 120px; /* Extra space for mobile header + brands bar */
   }
   max-width: none;
 
